TRAC-6317 alignment issues in query editor fix

--- a/src/app/components/modals/configure-bar-chart/configure-bar-chart.component.scss
+++ b/src/app/components/modals/configure-bar-chart/configure-bar-chart.component.scss
@@ -162,7 +162,9 @@
 .mat-tab-group.mat-primary .mat-ink-bar {
   background-color: $background !important;
 }
-
+.mat-tab-body-content{
+  overflow: hidden;
+}
 @keyframes spinner {
   to {
     transform: rotate(360deg);
